...
    }];

    UIAlertAction *definitely = [UIAlertAction actionWithTitle:@"Absolutely!" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        [self dismissViewControllerAnimated:YES completion:NULL];
    }];

    UIAlertAction *no = [UIAlertAction actionWithTitle:@"Heck no!" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        [self dismissViewControllerAnimated:YES completion:NULL];
    }];

    [alert addAction:yes];
    [alert addAction:definitely];
    [alert addAction:no];
...
